--- a/app/views/ads/edit.html.erb
+++ b/app/views/ads/edit.html.erb
@@ -1,7 +1,19 @@
 <div class="container">
     <div class="row">
         <div class="eight columns">
+            <% if @ad.draft? %>
                 <%= render 'form' %>
+            <% else %>
+                <h2>Rediger annonse?</h2>
+                <div>
+                    Annonsen er <%= @ad.display_status %>. Vil du redigered den?
+                    Etter at annonsen er redigert må den sendes til ny godkjenning.
+                </div>
+                <div>
+                    <%= button_to 'Rediger annonsen', draft_ad_path(@ad),
+                        form_class: 'u-inline', class: 'button button-primary' %>
+                </div>
+            <% end %>
         </div>
 
         <div class="four columns offset-by-one column">
