--- a/app/views/unavailabilities/index.html.erb
+++ b/app/views/unavailabilities/index.html.erb
@@ -16,7 +16,10 @@
                 <p>Ingen perioder er satt utilgjengelige</p>
             <% else %>
                 <% @ad.unavailabilities.each do |u| %>
-
+                    <div>
+                        <%= u.from_date %>
+                        <%= u.to_date %>
+                    </div>
                 <% end %>
             <% end %>
 
@@ -32,7 +35,7 @@
                 <%= f.date_select :to_date %>
 
                 <br>
-                <%= f.submit 'Legg til' %>
+                <%= f.submit 'Legg til', class: 'button button-primary' %>
 
             <% end %>
 
