--- a/app/views/unavailabilities/index.html.erb
+++ b/app/views/unavailabilities/index.html.erb
@@ -17,8 +17,8 @@
             <% else %>
                 <% @ad.unavailabilities.each do |u| %>
                     <div>
-                        <%= u.from_date %>
-                        <%= u.to_date %>
+                        <%= u.starts_at %>
+                        <%= u.ends_at %>
                         <%= button_to 'slett', ad_unavailability_path(@ad, u), method: :delete, form_class: 'u-inline', class: 'button' %>
                     </div>
                 <% end %>
@@ -30,10 +30,10 @@
             <%= form_for :unavailability do |f| %>
 
                 <label>Fra og med dato:</label>
-                <%= f.date_select :from_date %>
+                <%= f.date_select :starts_at %>
 
                 <label>Til og med dato:</label>
-                <%= f.date_select :to_date %>
+                <%= f.date_select :ends_at %>
 
                 <br>
                 <%= f.submit 'Legg til', class: 'button button-primary' %>
