--- a/app/views/financial_transactions/_financial_transaction.html.erb
+++ b/app/views/financial_transactions/_financial_transaction.html.erb
@@ -7,6 +7,6 @@
         <%= link_to financial_transaction.from_user.decorate.display_name, financial_transaction.from_user %>
     </td>
     <td>
-        <%= format_monetary_full_pretty financial_transaction.amount %>
+        <%= format_monetary_full_pretty financial_transaction.amount_to_receive %>
     </td>
 </tr>
