--- a/app/views/backstage/index.html.erb
+++ b/app/views/backstage/index.html.erb
@@ -13,6 +13,10 @@
                     <td><%= request.host %></td>
                 </tr>
                 <tr>
+                    <th>Git revision:</th>
+                    <td><%= @revision %></td>
+                </tr>
+                <tr>
                     <th><%= link_to 'Ads pending review:', pending_ad_reviews_path %></th>
                     <td><%= @pending_ads_cnt %></td>
                 </tr>
