--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -217,7 +217,10 @@
     <div data-controller="adErrors"></div>
 
     <div class="u-push-down">
-        <%= button_to 'Legg ut', submit_for_review_ad_path(@ad), disabled: !@ad.may_submit_for_review?, form_class: 'u-inline', class: 'button button-f', data: {controller: 'publishButton'} %>
+        <%= button_to 'Legg ut', submit_for_review_ad_path(@ad),
+                disabled: !@ad.may_submit_for_review?,
+                form_class: 'u-inline', class: 'button button-primary',
+                data: {controller: 'publishButton'} %>
     </div>
 
     <hr>
