Use primary button on the submit sms verification button

--- a/app/views/users/_verify_sms.html.erb
+++ b/app/views/users/_verify_sms.html.erb
@@ -11,7 +11,7 @@
                 <%= text_field_tag 'user[phone_number_confirmation_token]', nil, class: 'u-full-width', maxlength: 8, placeholder: 'SMS kode' %>
             </div>
             <div class="twelve columns">
-                <%= submit_tag 'Bekreft', class: 'u-pull-right button' %>
+                <%= submit_tag 'Bekreft', class: 'u-pull-right button button-primary' %>
             </div>
 
         </div>
