Show a usable test card in dev on page for adding payment cards

--- a/app/views/user_payment_cards/_form.html.erb
+++ b/app/views/user_payment_cards/_form.html.erb
@@ -17,8 +17,21 @@
               <p>
                 <strong>
                   TEST ENVIRONMENT. DO NOT USE REAL CARD NUMBERS!! <br>
-                  Only use numbers listed in the <%= link_to 'mangopay documentation', 'https://docs.mangopay.com/api-references/test-payment/' %>.
-                    Mangopay test visa card num: <code>4970100000000154</code>. csc: <code>123</code>.
+                  Only use numbers listed in the
+                  <%= link_to 'mangopay documentation', 'https://docs.mangopay.com/api-references/test-payment/' %>.
+                  
+                  Mangopay test visa card:
+                  <dl>
+                    <dt>Card number:</dt>
+                    <dd><code>3569990000000140</code></dd>
+
+                    <dt>CSC:</dt>
+                    <dd><code>123</code></dd>
+
+                    <dt>Password:</dt>
+                    <dd><code>secret3</code></dd>
+                </dl>
+
                 </strong>
               </p>
             <%- end -%>
