--- a/app/assets/stylesheets/misc.scss
+++ b/app/assets/stylesheets/misc.scss
@@ -42,3 +42,14 @@
     &__name {
     }
 }
+
+
+.welcome-bot {
+    float: right;
+    width: 300px;
+
+    @media (max-width: 500px) {
+        width: 160px;
+    }
+
+}
