--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container u-push-down">
     <div class="row">
         <div class="twelve columns">
 
@@ -90,15 +90,6 @@
                 <% end %>
 
             </div>
-
-            <hr>
-
-            <h2>Ønsker du å bli medlem som bedrift?</h2>
-
-            <p>
-                Meld deg inn med <%= link_to 'dette skjemaet.', Plendit::Application.config.x.signup.bedriftskunde_signup_link %>
-            </p>
-
         </div>
     </div>
 
