--- a/app/views/ads/_ad_status_box.html.erb
+++ b/app/views/ads/_ad_status_box.html.erb
@@ -55,7 +55,7 @@
             til publisering.
         </div>
     <% else %>
-        <%= button_to 'Tilgjengelighet', ad_unavailabilities_path(ad),
+        <%#= button_to 'Tilgjengelighet', ad_unavailabilities_path(ad),
                 form_class: 'u-inline', class: btncls, method: :get %>
     <% end %>
 
