do not allow uploading of drivers licenses for users younger then allowed rental age.
- added rspec tests
- tested

--- a/app/views/users/_verifications_list.html.erb
+++ b/app/views/users/_verifications_list.html.erb
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="docs-box__right">
-                <% unless doc.state == :verified || doc.state == :pending %>
+                <% unless doc.state == :verified || doc.state == :pending || doc.state == :too_young %>
                     <%= link_to doc.preverify_action, doc.path %>
                 <% end %>
             </div>
