bugfix in message__to_user: correctly show listing title

--- a/app/views/application_mailer/message__to_user.html.erb
+++ b/app/views/application_mailer/message__to_user.html.erb
@@ -3,7 +3,7 @@
 </p>
 
 <p>
-  <%= @message.from_user.public_name %> har sendt deg en melding om utleie av "<%= @message.ad.title %>".
+  <%= @message.from_user.public_name %> har sendt deg en melding om utleie av "<%= @message.booking.ad.title %>".
 </p>
 
 <p>
