--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -88,7 +88,8 @@
                     <label>Registreringsnummer:</label>
                     <%= f.text_field :registration_number, class: 'u-full-width', placeholder: 'Regnr' %>
                     <div class="help-box u-push-down">
-                    Jeg aksepterer at dersom jeg ikke kan fremvise kjøpekontrakt eller registrering har jeg ikke forsikring for skader hvor båten ikke kan lokaliseres (underslag og tyveri).
+                        Jeg aksepterer at dersom jeg ikke kan fremvise kjøpekontrakt eller registrering har jeg ikke forsikring for skader hvor båten ikke kan lokaliseres (underslag og tyveri).
+                    </div>
                 </div>
                 <%= f.label :accepted_boat_insurance_terms do %>
                     <%= f.check_box :accepted_boat_insurance_terms %>
