improve prosa, maybe someone should check my norwegian skills.

--- a/app/views/application_mailer/message__to_user.html.erb
+++ b/app/views/application_mailer/message__to_user.html.erb
@@ -13,7 +13,7 @@
 </p>
 
 <p>
-  Det er mulig å lese hele samtale på <%= link_to 'booking', booking_url( @message.booking ) %>.
+  Det er mulig å lese hele samtale og svare denne melding på <%= link_to 'booking side', booking_url( @message.booking ) %>.
 </p>
 
 <p>
