improved prosa went through the spellchecker now.

--- a/app/views/application_mailer/message__to_user.html.erb
+++ b/app/views/application_mailer/message__to_user.html.erb
@@ -13,7 +13,7 @@
 </p>
 
 <p>
-  Det er mulig å lese hele samtale og svare denne melding på <%= link_to 'booking side', booking_url( @message.booking ) %>.
+  Det er mulig å lese hele denne samtalen og svare på denne meldingen på <%= link_to 'bookingsiden', booking_url( @message.booking ) %>.
 </p>
 
 <p>
