--- a/app/views/ads/_secondary_prices.html.erb
+++ b/app/views/ads/_secondary_prices.html.erb
@@ -1,33 +1,41 @@
 <% @ad.secondary_payin_rules.each do |rule| %>
     <div class="u-push-down">
-        <div class="main-price__row">
-            <span class="main-price__label">Ved utleie over:</span>
-            <span class="main-price__value"><%= rule.effective_from %> dager</span>
-        </div>
+        <% if rule.valid? %>
+            <div class="main-price__row">
+                <span class="main-price__label">Ved utleie over:</span>
+                <span class="main-price__value"><%= rule.effective_from %> dager</span>
+            </div>
 
-        <div class="main-price__row">
-            <span class="main-price__label">Reduseres prisen til:</span>
-            <span class="main-price__value"><%= format_monetary_full_pretty(rule.payin_amount) %></span>
-        </div>
+            <div class="main-price__row">
+                <span class="main-price__label">Reduseres prisen til:</span>
+                <span class="main-price__value"><%= format_monetary_full_pretty(rule.payin_amount) %></span>
+            </div>
 
-        <div class="main-price__row">
-            <span class="main-price__label">Leiegebyr:</span>
-            <span class="main-price__value"><%= format_monetary_full_pretty(@ad.booking_calculator.total_fee(rule)) %></span>
-        </div>
+            <div class="main-price__row">
+                <span class="main-price__label">Leiegebyr:</span>
+                <span class="main-price__value"><%= format_monetary_full_pretty(@ad.booking_calculator.total_fee(rule)) %></span>
+            </div>
 
-        <div class="main-price__row">
-            <% if @ad.bap? %>
-                <i>Inkluderer forsikring opp til</i>
-                <i><%= format_monetary_full_pretty(@ad.booking_calculator.max_insurance_coverage(@ad.main_payin_rule)) %></i>
-            <% else %>
-                <i>Inkluderer forsikring</i>
-            <% end %>
-        </div>
+            <div class="main-price__row">
+                <% if @ad.bap? %>
+                    <i>Inkluderer forsikring opp til</i>
+                    <i><%= format_monetary_full_pretty(@ad.booking_calculator.max_insurance_coverage(@ad.main_payin_rule)) %></i>
+                <% else %>
+                    <i>Inkluderer forsikring</i>
+                <% end %>
+            </div>
 
-        <div class="main-price__row">
-            <strong class="main-price__label">Utbetalt til deg per dag:</strong>
-            <strong class="main-price__value"><%= format_monetary_full_pretty(@ad.booking_calculator.payout_amount(rule)) %></strong>
-        </div>
+            <div class="main-price__row">
+                <strong class="main-price__label">Utbetalt til deg per dag:</strong>
+                <strong class="main-price__value"><%= format_monetary_full_pretty(@ad.booking_calculator.payout_amount(rule)) %></strong>
+            </div>
+        <% else %>
+            <div class="main-price__row">
+                <% rule.errors.values.flatten.each do |msg| %>
+                    <div><%= msg %></div>
+                <% end %>
+            </div>
+        <% end %>
 
         <div>
             <%= form_for rule, url: ad_payin_rule_path(@ad, rule), method: :delete do %>
