adinput: add FIXME about minor UI bug (can report wrong minimum price if the estimated_value is changed after page load)

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -191,11 +191,13 @@
                 <%= f.hidden_field :effective_from ,   data: { effective_from: ''}, id: 'ignore_2' %>
                 <%= f.hidden_field :payin_amount_in_h, data: { payin_amount:   ''}, id: 'ignore_3' %>
             <% end %>
-    
+
             <div class="price-adder">
                 <%= form_for( PayinRule.new, url: (ad_payin_rules_path @ad), data: { new_rule_form: '' } ) do |f| %>
 
                     <div class="help-box u-push-down">
+                        <%# FIXME: This is buggy, for boats, the minimum price is dependent on the estimated_value which can be edited dynamically.
+                            While we render the value below only on page load time. %>
                         Pris per enkelt dag må være minst
                         kr <%= ApplicationController.helpers.format_monetary_full_pretty @ad.main_payin_rule.min_payin_amount %>
                         Vil du gi en lavere pris per dag ved lengre
