--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -5,7 +5,7 @@
 
     <% unless @hide_search_field %>
         <%= form_tag(search_path, method: 'get', class: 'top-bar__form') do %>
-            <%= text_field_tag 'q','', type: 'text', class: 'top-bar__search-input', placeholder: 'Hva vil du leie?', data: { controller: 'responsivePlaceholder'} %>
+            <%= text_field_tag 'q','', type: 'text', class: 'top-bar__search-input', placeholder: (t '.search_term_placeholder'), data: { controller: 'responsivePlaceholder'} %>
         <% end %>
     <% end %>
 
@@ -23,7 +23,7 @@
                 <% end %>
                 <%= image_tag 'notification.svg', class: 'top-bar__notification-logo' %></a>
             <%= link_to users_path, :class => "top-bar__navbar-link" do -%>
-                <span class="top-bar__navbar-section top-bar__me-label">Min side</span> <%- -%>
+                <span class="top-bar__navbar-section top-bar__me-label"><%= t '.my_page' %></span> <%- -%>
                 <%= avatar_image current_user, :tiny, class: 'top-bar__avatar' -%>
             <%- end -%>
         <%- else -%>
