Cleaned up personal bar to use symbols, not strings, for selected Use translation files for labels

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'shared/personal_bar', locals: { selected: 'Forespørsler' } %>
+<%= render partial: 'shared/personal_bar', locals: { selected: :activities } %>
 
 <div class="container">
     <div class="u-push-down">
