--- a/app/views/favorite_ads/index.html.erb
+++ b/app/views/favorite_ads/index.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'shared/personal_bar', locals: { selected: 'Favoritter' } %>
+<%= render partial: 'shared/personal_bar', locals: { selected: :favorites } %>
 
 <div class="container">
     <div class="row">
