--- a/app/views/user_payment_cards/new.html.erb
+++ b/app/views/user_payment_cards/new.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "shared/personal_bar", locals: { selected: "Profil" } %>
+<%= render partial: "shared/personal_bar", locals: { selected: :profile } %>
 <div class="container">
     <div class="row">
         <div class="eight columns">
