--- a/app/views/users/rental_history.html.erb
+++ b/app/views/users/rental_history.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'shared/personal_bar', locals: {selected: 'Leiehistorikk'} %>
+<%= render partial: 'shared/personal_bar', locals: { selected: :rentals } %>
 
 <div class="container">
     <div class="row">
