--- a/app/views/ads/list.html.erb
+++ b/app/views/ads/list.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'shared/personal_bar', locals: { selected: 'Annonser' } %>
+<%= render partial: 'shared/personal_bar', locals: { selected: :ads } %>
 
 <div class="container">
     <div class="row">
