--- a/app/views/users/payout.html.erb
+++ b/app/views/users/payout.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'shared/personal_bar', locals: {selected: 'Betaling'} %>
+<%= render partial: 'shared/personal_bar', locals: { selected: :payment } %>
 
 <div class="container">
   <div class="row">
