--- a/app/views/users/payment.html.erb
+++ b/app/views/users/payment.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "shared/personal_bar", locals: {selected: :payment } %>
+<%= render partial: 'shared/personal_bar', locals: { selected: :payment } %>
 
 <p id="notice">
     <%= notice %>
