--- a/app/views/ads/edit_availability.html.erb
+++ b/app/views/ads/edit_availability.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "shared/personal_bar", locals: { selected: :ads } %>
+<%= render partial: 'shared/personal_bar', locals: { selected: :ads } %>
 <div class="container">
     <div class="row">
         <h2>Tilgjengelighet for <%= @ad.display_title %></h2>
