fix prosa for boat deductible. string from i18n.

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -70,7 +70,8 @@
                 <%= f.telephone_field( :estimated_value_in_h ) %>
 
                 <div data-insurance-info class="<%= @ad.estimated_value_in_h.present? && ( @ad.estimated_value_in_h > @boat_price_threshold ) ? '' : 'u-hidden' %>">
-                    Fixme: Prosa om egenandel for båteier her.
+                    <%= t :owner_has_deductible_for_boat %>
+                    <%= link_to t(:read_more_here), '/docs/if/Sammendrag_av_Korttidsforsikring_Baat.pdf' %>.
                 </div>
 
             </div>
