--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -70,8 +70,8 @@
                 <%= f.telephone_field( :estimated_value_in_h ) %>
 
                 <div data-insurance-info class="<%= @ad.estimated_value_in_h.present? && ( @ad.estimated_value_in_h > @boat_price_threshold ) ? '' : 'u-hidden' %>">
-                    <%= t :owner_has_deductible_for_boat %>
-                    <%= link_to t(:read_more_here), '/docs/if/Sammendrag_av_Korttidsforsikring_Baat.pdf' %>.
+                    <%= t '.owner_has_deductible_for_boat' %>
+                    <%= link_to t('.read_more_here'), '/docs/if/Sammendrag_av_Korttidsforsikring_Baat.pdf' %>.
                 </div>
 
             </div>
